# po2json

./: .clang-format  .clang-tidy  .dockerignore  CMakeLists.txt  Dockerfile  cmake-variants.yaml  sonar-project.properties  toolchain
.github/actions/install-dependencies/: action.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  lint.yml  sonarcloud.yml  static-analysis.yml
src/: CMakeLists.txt  conv.cpp  conv.h  gettext.cpp  gettext.h  json.cpp  json.h  po2json.cpp  processor.cpp  processor.h  translations.cpp  translations.h
test/: .clang-tidy  CMakeLists.txt  test_conv.cpp  test_json.cpp  test_processor.cpp  test_translations.cpp
